--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
-                        <a href="#" class="nav-item nav-link">Bodas</a>
+                        <a href="bodas.html" class="nav-item nav-link">Bodas</a>
                         <a href="#" class="nav-item nav-link">Cumpleaños</a>
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
@@ -80,7 +80,7 @@
                         <a href="#" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
-                        <a href="#" class="nav-item nav-link">Contacto</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -290,55 +290,55 @@
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
                             <img class="img-fluid" src="img/destination-1.jpg" alt="">
-                            <a class="destination-overlay text-white text-decoration-none" href="">
+                            <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Estados Unidos</h5>
                                 <span>+50 cuidades</span>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
                             <img class="img-fluid" src="img/destination-2.jpg" alt="">
-                            <a class="destination-overlay text-white text-decoration-none" href="">
+                            <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Reino unido</h5>
                                 <span>+50 cuidades</span>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
                             <img class="img-fluid" src="img/destination-3.jpg" alt="">
-                            <a class="destination-overlay text-white text-decoration-none" href="">
+                            <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Australia</h5>
                                 <span>+50 cuidades</span>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
                             <img class="img-fluid" src="img/destination-4.jpg" alt="">
-                            <a class="destination-overlay text-white text-decoration-none" href="">
+                            <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">India</h5>
                                 <span>+50 cuidades</span>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
                             <img class="img-fluid" src="img/destination-5.jpg" alt="">
-                            <a class="destination-overlay text-white text-decoration-none" href="">
+                            <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Sudáfrica</h5>
                                 <span>+50 cuidades</span>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
                             <img class="img-fluid" src="img/destination-6.jpg" alt="">
-                            <a class="destination-overlay text-white text-decoration-none" href="">
+                            <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Indonesia</h5>
                                 <span>+50 cuidades</span>
-                            </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -391,161 +391,119 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
+                        <a class="package-item bg-white mb-2">
                             <img class="img-fluid" src="img/bodas.webp" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
+                                
                                 <a class="h5 text-decoration-none" href="">Bodas</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
+                        <a class="package-item bg-white mb-2">
                             <img class="img-fluid" src="img/cumpleaños.jpeg" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
                                 <a class="h5 text-decoration-none" href="">Cumpleaños</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
+                        <a class="package-item bg-white mb-2">
                             <img class="img-fluid" src="img/+50.jpg" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
                                 <a class="h5 text-decoration-none" href="">+ 50</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
+                        <a class="package-item bg-white mb-2">
                             <img class="img-fluid" src="img/lgbt.jpg" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
                                 <a class="h5 text-decoration-none" href="">Comunidad LGBT</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
+                        <a class="package-item bg-white mb-2">
                             <img class="img-fluid" src="img/xv.webp" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
                                 <a class="h5 text-decoration-none" href="">XV</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
+                        <a class="package-item bg-white mb-2">
                             <img class="img-fluid" src="img/mochileros.jpg" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
                                 <a class="h5 text-decoration-none" href="">Mochileros</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
+                        <a class="package-item bg-white mb-2">
                             <img class="img-fluid" src="img/package-6.jpg" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
                                 <a class="h5 text-decoration-none" href="">Mujeres</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="package-item bg-white mb-2">
-                            <div class="">
-                                <img class="img-fluid" src="img/niños.jpg" alt="">
-
-                            </div>
+                        <a class="package-item bg-white mb-2">
+                            <img class="img-fluid" src="img/niños.jpg" alt="">
                             <div class="p-4">
-                                <!-- <div class="d-flex justify-content-between mb-3">
-                                    <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i>Thailand</small>
-                                    <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i>3 days</small>
-                                    <small class="m-0"><i class="fa fa-user text-primary mr-2"></i>2 Person</small>
-                                </div> -->
                                 <a class="h5 text-decoration-none" href="">Teen</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small></h6>
-                                        <!-- <h5 class="m-0">$350</h5> -->
+                                        <a href=""><small class="m-0"><i class="fa fa-link" aria-hidden="true"></i> Conoce más</small></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
