--- a/bodas.html
+++ b/bodas.html
@@ -33,7 +33,7 @@
                     <div class="d-inline-flex align-items-center">
                         <p><i class="fa fa-envelope mr-2"></i>ed@edtravel.com.mx</p>
                         <p class="text-body px-3">|</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+52 1 81 2724 1709</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+52 1 81 2723 67090</p>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-right">
@@ -100,7 +100,7 @@
 
     <!-- Button whastapp -->
     <nav role="button" class="layout_whatsapp">
-		<a class="layout_whatsapp__button" href="https://api.whatsapp.com/send?phone=5218127241709&text=Hola%20quiero%20cotizar" target="_blank">
+		<a class="layout_whatsapp__button" href="https://api.whatsapp.com/send?phone=TELEFONO&text=Hola%20quiero%20cotizar" target="_blank">
 			<img src='./img/whatsapp-icon-logo-6E793ACECD-seeklogo.com.webp' alt='whastapp'  width="100%" height="100%"/>
 		</a>
 	</nav>
