--- a/bodas.html
+++ b/bodas.html
@@ -180,34 +180,83 @@
         <!-- Booking End -->
    
          <!-- About Start -->
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-5" style="padding-top: 0px !important;">
             <div class="container pt-5">
                 <div class="row">
                     <div class="col-lg-6" style="min-height: 500px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="img/about.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/boda1.webp" style="object-fit: cover;">
                         </div>
                     </div>
                     <div class="col-lg-6 pt-5 pb-lg-5">
                         <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
                             <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Bodas</h6>
-                            <h1 class="mb-3">We Provide Best Tour Packages In Your Budget</h1>
-                            <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                            <h1 class="mb-3">Distruta con nosotros de una boda inolvidable</h1>
+                            <p>Haz de tu boda la mejor experiencia para ti y tus invitados en el lugar que siempre soñaste.</p>
                             <div class="row mb-4">
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/about-1.jpg" alt="">
+                                    <img class="img-fluid" src="img/boda2.webp" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/about-2.jpg" alt="">
+                                    <img class="img-fluid" src="img/boda3.jpg" alt="">
                                 </div>
                             </div>
-                            <a href="" class="btn btn-primary mt-1">Book Now</a>
+                            <a href="" class="btn btn-primary mt-1">Llamanos</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- About End -->
+
+        <!-- Testimonial Start -->
+        <div class="container-fluid py-5">
+            <div class="container py-5">
+                <div class="text-center mb-3 pb-3">
+                    <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Lugares</h6>
+                    <h1>Lugares disponibles para disfrutar de tu evento </h1>
+                </div>
+                <div class="owl-carousel testimonial-carousel">
+                    <div class="text-center pb-4">
+                        <img class="img-fluid mx-auto" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                            </p>
+                            <h5 class="text-truncate">Client Name</h5>
+                            <span>Profession</span>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                            </p>
+                            <h5 class="text-truncate">Client Name</h5>
+                            <span>Profession</span>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                            </p>
+                            <h5 class="text-truncate">Client Name</h5>
+                            <span>Profession</span>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/testimonial-4.jpg" style="width: 100px; height: 100px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
+                            </p>
+                            <h5 class="text-truncate">Client Name</h5>
+                            <span>Profession</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Testimonial End -->
 
 
     </main>
