--- a/bodas.html
+++ b/bodas.html
@@ -218,39 +218,76 @@
                 </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div class="text-center pb-4">
-                        <img class="img-fluid mx-auto" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;" >
+                        <img class="img-fluid mx-auto" src="img/europa.webp" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                            </p>
-                            <h5 class="text-truncate">Client Name</h5>
-                            <span>Profession</span>
+                            <p class="mt-5">Europa</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;" >
+                        <img class="img-fluid mx-auto" src="img/canada.webp" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                            </p>
-                            <h5 class="text-truncate">Client Name</h5>
-                            <span>Profession</span>
+                            <p class="mt-5">Canada</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;" >
+                        <img class="img-fluid mx-auto" src="img/alaska.png" style="width:100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                            </p>
-                            <h5 class="text-truncate">Client Name</h5>
-                            <span>Profession</span>
+                            <p class="mt-5">Alaska</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/testimonial-4.jpg" style="width: 100px; height: 100px;" >
+                        <img class="img-fluid mx-auto" src="img/brasial.jpg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                            </p>
-                            <h5 class="text-truncate">Client Name</h5>
-                            <span>Profession</span>
+                            <p class="mt-5">Brasil</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/china.jpg" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">China</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/dubai.jpg" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Dubai</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/egipto.png" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Egipto</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/italia.png" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Italia</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/mexico.png" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Mexico</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/republica.png" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Republica Dominicana</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/venecia.png" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Venecia</p>
                         </div>
                     </div>
                 </div>
