--- a/contacto.html
+++ b/contacto.html
@@ -71,16 +71,16 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                        <a href="index.html" class="nav-item nav-link ">Inicio</a>
                         <a href="#" class="nav-item nav-link">Bodas</a>
                         <a href="#" class="nav-item nav-link">Cumpleaños</a>
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
                         <a href="#" class="nav-item nav-link">XV</a>
-                        <a href="#" class="nav-item nav-link">Mochileros</a>
+                        <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
-                        <a href="#" class="nav-item nav-link">Contacto</a>
+                        <a href="contacto.html" class="nav-item nav-link  active">Contacto</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
