--- a/mochileros.html
+++ b/mochileros.html
@@ -77,10 +77,10 @@
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
                         <a href="#" class="nav-item nav-link">XV</a>
-                        <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
+                        <a href="#" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
-                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+                        <a href="#" class="nav-item nav-link">Contacto</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -108,14 +108,14 @@
     <main class="main">
 
          <!-- Header Start -->
-        <div class="container-fluid page-header bodas">
+        <div class="container-fluid page-header jovenes">
             <div class="container">
                 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-                    <h3 class="display-4 text-white text-uppercase">Bodas</h3>
+                    <h3 class="display-4 text-white text-uppercase">Mochileros</h3>
                     <div class="d-inline-flex text-white">
                         <p class="m-0 text-uppercase"><a class="text-white" href="">Inicio</a></p>
                         <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                        <p class="m-0 text-uppercase">Bodas</p>
+                        <p class="m-0 text-uppercase">mochileros</p>
                     </div>
                 </div>
             </div>
@@ -158,16 +158,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="mb-3 mb-md-0">
-                                        <select class="custom-select px-4" style="height: 47px;">
-                                            <option selected>Duración</option>
-                                            <option value="1 semana - 1 mes">1 semana - 1 mes</option>
-                                            <option value="1 mes - 6 meses">1 mes - 6 meses</option>
-                                            <option value="+6 meses">+6 meses</option>
-                                        </select>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -185,20 +175,20 @@
                 <div class="row">
                     <div class="col-lg-6" style="min-height: 500px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="img/boda1.webp" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/mochilero1.webp" style="object-fit: cover;">
                         </div>
                     </div>
                     <div class="col-lg-6 pt-5 pb-lg-5">
                         <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
-                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Bodas</h6>
+                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Mochileros</h6>
                             <h1 class="mb-3">Distruta con nosotros de una boda inolvidable</h1>
                             <p>Haz de tu boda la mejor experiencia para ti y tus invitados en el lugar que siempre soñaste.</p>
                             <div class="row mb-4">
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/boda2.webp" alt="">
+                                    <img class="img-fluid" src="img/mochileros2.webp" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/boda3.jpg" alt="">
+                                    <img class="img-fluid" src="img/mochileros3.jpeg" alt="">
                                 </div>
                             </div>
                             <a href="" class="btn btn-primary mt-1">Llamanos</a>
