--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
                         <a href="#" class="nav-item nav-link">XV</a>
-                        <a href="#" class="nav-item nav-link">Mochileros</a>
+                        <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
                         <a href="contacto.html" class="nav-item nav-link">Contacto</a>
