--- a/mochileros.html
+++ b/mochileros.html
@@ -108,7 +108,7 @@
     <main class="main">
 
          <!-- Header Start -->
-        <div class="container-fluid page-header jovenes">
+        <div class="container-fluid page-header mochileros">
             <div class="container">
                 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
                     <h3 class="display-4 text-white text-uppercase">Mochileros</h3>
@@ -181,8 +181,10 @@
                     <div class="col-lg-6 pt-5 pb-lg-5">
                         <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
                             <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Mochileros</h6>
-                            <h1 class="mb-3">Distruta con nosotros de una boda inolvidable</h1>
-                            <p>Haz de tu boda la mejor experiencia para ti y tus invitados en el lugar que siempre soñaste.</p>
+                            <h1 class="mb-3">Únase solo, viaje juntos</h1>
+                            <p>Sabemos que nada supera la sensación de máxima libertad que te brinda viajar en solitario. Es una oportunidad de explorar el mundo en tus propios términos, establecer tu propio rumbo y embarcarte en tu viaje personal.
+                                Dicho esto, sabemos que viajar se trata de las personas que conoces, los personajes locales que conoces, los nuevos mejores amigos que conoces y que cambian tu vida para siempre. 
+                            </p>
                             <div class="row mb-4">
                                 <div class="col-6">
                                     <img class="img-fluid" src="img/mochileros2.webp" alt="">
